# loomer

./: .dockerignore  .gitignore  DEPLOY_README.md  Dockerfile  LICENSE  README.md  client.py  main.py  pyproject.toml
.github/workflows/: deploy.yml
loom_agent/: __init__.py  agent.py  prompt.py  test.py
loom_agent/shared/: consts.py  db.py  embeddings.py  models.py
loom_agent/sub_agents/onboarding/: agent.py  prompt.py
loom_agent/sub_agents/planning/: agent.py  prompt.py
loom_agent/sub_agents/progress/: agent.py  prompt.py
loom_agent/sub_agents/resource/: agent.py  prompt.py
loom_agent/tools/: phase_tools.py  preference_tools.py  project_tools.py  resource_tools.py  session_tools.py  task_tools.py
routers/: chat.py  project.py  resource.py  task.py
test/: README.md  mock_main.py  test_mock_server.py
