[project]
name = "loomer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.136.3",
    "google-adk>=2.2.0",
    "litellm>=1.87.1",
    "mcp>=1.27.2",
    "protobuf>=7.35.0",
    "pydantic>=2.13.4",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "youtube-transcript-api>=1.2.4",
]
